sandc/test/fixtures/astRegression/shouldFail/productions/ifExpression/IfStatement.sand
pub class IfStatement {
    foo() {
        (
            if cond {
                x();
            } else {
                x();
            }
        )
    }
}